--- a/FE_Algorithm/CJ4-CSS画三角形.html
+++ b/FE_Algorithm/CJ4-CSS画三角形.html
@@ -1,9 +1,8 @@
 <!--
  * @Author: Ran
- * @Date: 2021-01-16 11:01:17
- * @LastEditors: Please set LastEditors
- * @LastEditTime: 2021-03-25 09:38:14
- * @FilePath: \JZoffer\test.html
+ * @Date: 2021-03-25 10:13:22
+ * @LastEditTime: 2021-03-25 10:13:53
+ * @FilePath: \JZoffer\FE_Algorithm\CJ4-CSS画三角形.html
  * @Description: 
 -->
 <!DOCTYPE html>
@@ -26,7 +25,7 @@
 </head>
 
 <body>
-    <div>hello</div>
+    <div></div>
 </body>
 
 </html>
