--- a/test.html
+++ b/test.html
@@ -2,7 +2,7 @@
  * @Author: Ran
  * @Date: 2021-01-16 11:01:17
  * @LastEditors: Please set LastEditors
- * @LastEditTime: 2021-03-25 09:38:14
+ * @LastEditTime: 2021-04-07 19:49:46
  * @FilePath: \JZoffer\test.html
  * @Description: 
 -->
@@ -14,19 +14,90 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <style>
-        div {
-            width: 0;
-            height: 0;
-            border-top: 40px solid transparent;
-            border-left: 40px solid transparent;
-            border-right: 40px solid transparent;
-            border-bottom: 40px solid #ff0000;
+        html,
+        body {
+            background-color: #2962FF;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            height: 100%;
+            position: relative;
         }
     </style>
 </head>
 
 <body>
-    <div>hello</div>
+    <progress-ring stroke="4" radius="60" progress="0"></progress-ring>
+
+    <script>
+        class ProgressRing extends HTMLElement {
+            constructor() {
+                super();
+                const stroke = this.getAttribute('stroke');
+                const radius = this.getAttribute('radius');
+                const normalizedRadius = radius - stroke * 2;
+                this._circumference = normalizedRadius * 2 * Math.PI;
+
+                this._root = this.attachShadow({
+                    mode: 'open'
+                });
+                this._root.innerHTML = `
+      <svg
+        height="${radius * 2}"
+        width="${radius * 2}"
+       >
+         <circle
+           stroke="white"
+           stroke-dasharray="${this._circumference} ${this._circumference}"
+           style="stroke-dashoffset:${this._circumference}"
+           stroke-width="${stroke}"
+           fill="transparent"
+           r="${normalizedRadius}"
+           cx="${radius}"
+           cy="${radius}"
+        />
+      </svg>
+
+      <style>
+        circle {
+          transition: stroke-dashoffset 0.35s;
+          transform: rotate(-90deg);
+          transform-origin: 50% 50%;
+        }
+      </style>
+    `;
+            }
+
+            setProgress(percent) {
+                const offset = this._circumference - (percent / 100 * this._circumference);
+                const circle = this._root.querySelector('circle');
+                circle.style.strokeDashoffset = offset;
+            }
+
+            static get observedAttributes() {
+                return ['progress'];
+            }
+
+            attributeChangedCallback(name, oldValue, newValue) {
+                if (name === 'progress') {
+                    this.setProgress(newValue);
+                }
+            }
+        }
+
+        window.customElements.define('progress-ring', ProgressRing);
+
+        // emulate progress attribute change
+        let progress = 0;
+        const el = document.querySelector('progress-ring');
+
+        const interval = setInterval(() => {
+            progress += 10;
+            el.setAttribute('progress', progress);
+            if (progress === 100)
+                clearInterval(interval);
+        }, 1000);
+    </script>
 </body>
 
 </html>
