--- a/test.html
+++ b/test.html
@@ -2,7 +2,7 @@
  * @Author: Ran
  * @Date: 2021-01-16 11:01:17
  * @LastEditors: Please set LastEditors
- * @LastEditTime: 2021-04-09 11:10:16
+ * @LastEditTime: 2021-04-11 17:14:28
  * @FilePath: \JZoffer\test.html
  * @Description: 
 -->
@@ -14,36 +14,44 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <style>
-        #box {
-            width: 100%;
-            display: flex;
-            height: 100px;
-            margin: 10px;
-        }
-        
-        #left_box,
-        #right_box {
-            width: 200px;
-            height: 100px;
-            margin: 10px;
-            background-color: lightpink
-        }
-        
-        #center_box {
-            flex: 1;
-            height: 100px;
-            margin: 10px;
-            background-color: lightgreen
-        }
+
     </style>
 </head>
 
 <body>
-    <div id="box">
-        <div id="left_box"></div>
-        <div id="center_box"></div>
-        <div id="right_box"></div>
-    </div>
+    <script>
+        var entry = {
+            a: {
+                b: {
+                    c: {
+                        dd: 'abcdd'
+                    }
+                },
+                d: {
+                    xx: 'adxx'
+                },
+                e: 'ae'
+            }
+        }
+
+        function transform(obj) {
+            let res = {}
+            fn(obj)
+            return res
+
+            function fn(obj, temp_key = '') { //temp_key--临时存放属性名
+                for (let key in obj) {
+                    if (typeof obj[key] == "object") {
+                        fn(obj[key], temp_key + key + ".")
+                    } else {
+                        res[temp_key + key] = obj[key]
+                    }
+                }
+            }
+        }
+
+        console.log(transform(entry)) //打印测试
+    </script>
 </body>
 
 </html>
