半个月没刷题了

--- a/snackbar.html
+++ b/snackbar.html
@@ -1,8 +1,8 @@
 <!--
  * @Author: Ran
  * @Date: 2021-05-01 11:06:45
- * @LastEditTime: 2021-05-01 11:14:33
- * @FilePath: \snackbar-wuef:\FrontEndLearning\FE_Learning\JZoffer\snackbar.html
+ * @LastEditTime: 2021-05-02 21:59:18
+ * @FilePath: \JZoffer\snackbar.html
  * @Description: 
 -->
 <!DOCTYPE html>
@@ -53,6 +53,7 @@
             left: 50%;
             /* Center the snackbar */
             bottom: 30px;
+            transition: all;
             /* 30px from the bottom */
         }
         /* Show the snackbar when clicking on a button (class added with JavaScript) */
