--- a/snackbar.html
+++ b/snackbar.html
@@ -1,8 +1,8 @@
 <!--
  * @Author: Ran
  * @Date: 2021-05-01 11:06:45
- * @LastEditTime: 2021-05-04 16:36:34
- * @FilePath: \snackbar-wuef:\FrontEndLearning\FE_Learning\JZoffer\snackbar.html
+ * @LastEditTime: 2021-08-21 22:47:25
+ * @FilePath: \FrontEnd-Algorithm-JS\snackbar.html
  * @Description: 
 -->
 <!DOCTYPE html>
